# codecrafters-http-server-rust

./: .rustfmt.toml  Cargo.toml  README.md
src/: compression.rs  handlers.rs  lib.rs  main.rs  server.rs  thread_pool.rs  types.rs
